<?xml version="1.0" encoding="utf-8"?>
<!-- Разметка верхнего меню Toolbar -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.softwareindex.MainActivity">

    <!-- Кнопка «Добавить аудиторию» -->
    <item
        android:id="@+id/action_add_room"
        android:icon="@drawable/ic_add"
        android:orderInCategory="100"
        android:title="@string/title_add_room"
        app:showAsAction="ifRoom" />

    <!-- Опция «Добавить кафедру» -->
    <item
        android:id="@+id/action_add_department"
        android:orderInCategory="150"
        android:title="@string/action_add_department"
        app:showAsAction="never" />

    <!-- Опция «Сбросить данные к тестовым» -->
    <item
        android:id="@+id/action_reset_data"
        android:orderInCategory="200"
        android:title="@string/btn_reset_data"
        app:showAsAction="never" />
</menu>