<?xml version="1.0" encoding="utf-8"?>
<!-- Корневая разметка главного активити (MainActivity) -->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <!-- Верхняя панель приложения (Toolbar) -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name"
            app:subtitle="@string/app_subtitle"
            app:titleTextColor="@color/white"
            app:subtitleTextColor="#D1D5DB" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Основной контейнер фрагментов (NavHostFragment) -->
    <include layout="@layout/content_main" />

    <!-- Плавающая кнопка действия (FAB) для добавления аудиторий или ЭВМ -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/title_add_room"
        app:backgroundTint="@color/primary_blue"
        app:srcCompat="@drawable/ic_add"
        app:tint="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>